@@ -3,6 +3,7 @@ INCLUDE_REGULAR_EXPRESSION("^.*$")
 INCLUDE_DIRECTORIES(
   ${OPENJPEG_SOURCE_DIR}/libopenjpeg
   ${FCGI_INCLUDE_DIRNAME}
+  ${CURL_INCLUDE_DIRS}
 )
 
 # Defines the source code for the library
@@ -42,10 +43,10 @@ ${CMAKE_CURRENT_SOURCE_DIR}/dec_clientmsg_handler.c
 
 # Build the library
 ADD_LIBRARY(openjpip_local STATIC ${OPENJPIP_SRCS} ${LOCAL_SRCS})
-TARGET_LINK_LIBRARIES(openjpip_local ${OPENJPEG_LIBRARY_NAME})
+TARGET_LINK_LIBRARIES(openjpip_local ${OPENJPEG_LIBRARY_NAME} ${CURL_LIBRARIES})
 
 ADD_LIBRARY(openjpip_server STATIC ${OPENJPIP_SRCS})
-TARGET_LINK_LIBRARIES(openjpip_server ${FCGI_LIBNAME})
+TARGET_LINK_LIBRARIES(openjpip_server ${FCGI_LIBNAME} ${CURL_LIBRARIES})
 SET_TARGET_PROPERTIES(openjpip_server
   PROPERTIES COMPILE_FLAGS "-DSERVER")
 
